--- a/src/renderer/stylus/app.styl
+++ b/src/renderer/stylus/app.styl
@@ -1,5 +1,7 @@
 // APP整体样式
 @require '~@/stylus/color.styl'
+.footright 
+  background: $secondarycolor.gray!important
 .page
   background: $primarycolor.gray
   // padding-top: constant(safe-area-inset-top);
@@ -44,6 +46,9 @@
   display: block
 .f-right
   float: right
+
+.cursorpinter
+  cursor: pointer
 
 .line32
     height: 32px
