--- a/src/renderer/stylus/asset.styl
+++ b/src/renderer/stylus/asset.styl
@@ -254,10 +254,8 @@
   
   background-color:  $primarycolor.gray
 .accountandtotalasset
-  display: block
   border-radius:1px
   background-color:$secondarycolor.gray
-  margin:10px 10px
   border-radius: 5px
 .accountnameaddress
     z-index: 2
@@ -274,13 +272,10 @@
 .myassets_totalSum
   font-size: 20px
   padding-left: 20px
-  left: 0px
   color: $primarycolor.green
   background-color:  $secondarycolor.gray
   padding-top:0px
   padding-bottom:10px
-  margin-left:5px
-  margin-right:5px
   border:none
  
   .myassets_TotalSumWord
@@ -323,8 +318,7 @@
 
 .icon-wrapper
   margin: 0 auto
-  text-align: center
-  padding-top: 2px
+  padding-right: 8px
   .iconfont
     font-size: 36px
     color: $primarycolor.green
