--- a/src/renderer/components/K.styl
+++ b/src/renderer/components/K.styl
@@ -4,7 +4,7 @@
 .atitle
   padding-bottom: 8px
 .price
-  font-size: 20px
+  font-size: 28px
 .code
   font-size: 16px
 .up
@@ -19,6 +19,7 @@
   color: $secondarycolor.font
   padding-left: 2px
   padding-right: 2px
+  font-size: 13px
 .values
   font-size: 14px
 
@@ -46,3 +47,5 @@
   span
     display: inline-block
     white-space: nowrap
+.atitle
+  background: $secondarycolor.gray
