--- a/src/renderer/stylus/all.styl
+++ b/src/renderer/stylus/all.styl
@@ -1,5 +1,12 @@
 @require './main'
 @require './app'
+.lanspan 
+  height: 24px!important
+  line-height: 24px!important
+  display: inline-block
+  cursor: pointer
+.activelan
+  background: $primarycolor.gray
 
 .app {
   background-color: $primarycolor.gray;
