--- a/src/renderer/stylus/all.styl
+++ b/src/renderer/stylus/all.styl
@@ -163,4 +163,8 @@
       margin-bottom: constant(safe-area-inset-bottom);
     }
   }
+  .theme--dark .card, .application .theme--dark.card {
+    background-color: #303034!important;
+    color: #fff;
+  }
 }
