--- a/src/renderer/stylus/app.styl
+++ b/src/renderer/stylus/app.styl
@@ -106,9 +106,11 @@
   a:hover {
     text-decoration: none;
   }
+  /*
   .theme--dark .tabs__bar, .application .theme--dark.tabs__bar{
     background: #212122!important;
   }
+  */
   .tabs__item.tabs__item--active{
     color: #21CE90!important;  
   }
@@ -128,6 +130,11 @@
   background: $primarycolor.gray!important
   .tabs-bar
     background: $primarycolor.gray!important
+
+.tabs-bg-sdark
+  background: $secondarycolor.gray!important
+  .stabs
+    background: $secondarycolor.gray!important
 
 .underline
   text-decoration: underline
