--- a/src/renderer/components/K.styl
+++ b/src/renderer/components/K.styl
@@ -3,8 +3,7 @@
   width: 100%
 .atitle
   padding-bottom: 8px
-.price
-  font-size: 28px
+
 .code
   font-size: 16px
 .up
@@ -49,3 +48,8 @@
     white-space: nowrap
 .atitle
   background: $secondarycolor.gray
+  border-top-left-radius: 5px
+  border-top-right-radius: 5px
+.k-card
+  border-bottom:1px solid $primarycolor.gray
+ 
