--- a/src/renderer/stylus/app.styl
+++ b/src/renderer/stylus/app.styl
@@ -15,7 +15,7 @@
   // padding-bottom: constant(safe-area-inset-bottom);
 .content
   color: $primarycolor.font
-  font-size: 16px
+  font-size: 14px
   padding: 10px 10px
   padding-bottom: 60px
   display: block !important
@@ -54,7 +54,7 @@
 .f-right
   float: right
 
-.cursorpinter
+.cursorpointer
   cursor: pointer
 
 .line32
@@ -76,12 +76,15 @@
   padding: 0px 0px!important
 .primarycolor
   color: $primarycolor.green
+.secondaryfont 
+  color: $secondarycolor.font  
 
 .font32
   font-size: 32px
 .font28
   font-size: 28px
-
+.font24
+  font-size: 24px
 /**swiper样式覆盖*/
 .swiper-pagination-bullet
   width: .3rem
