--- a/src/renderer/stylus/trade.styl
+++ b/src/renderer/stylus/trade.styl
@@ -47,3 +47,11 @@ input[type=number]::-webkit-inner-spin-button
   padding-top: 24px
   // padding-top:calc(24px + constant(safe-area-inset-top))
   // padding-top:calc(24px + env(safe-area-inset-top))
+.trades-card
+  color: $secondarycolor.font
+.card-title
+  border-bottom: 1px solid $primarycolor.gray
+.card-body-content
+  height: 40vh
+  overflow-y: auto
+  color: $secondarycolor.font
