--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>polarstar</title>
+    <script src="https://jic.talkingdata.com/app/h5/v1?appid=37CB8A8DF2DD494A8E7A404A5C9DB48B&vn=萤火桌面版&vc=1.0.0"></script>
     <style> ::selection { background: white; /* WebKit/Blink Browsers */ } </style>
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
