--- a/src/renderer/stylus/trade.styl
+++ b/src/renderer/stylus/trade.styl
@@ -54,4 +54,5 @@ input[type=number]::-webkit-inner-spin-button
 .card-body-content
   height: 40vh
   overflow-y: auto
+  overflow-x: hidden
   color: $secondarycolor.font
